--- a/hair.css
+++ b/hair.css
@@ -10,18 +10,17 @@ body{
 header{
     background: url("./img/headerBackground.jpg") top/cover no-repeat;
     width: 100%;
-    height: 65vh;
+    height: 70vh;
     overflow: hidden;
     position: relative;
     object-fit: cover;
-    margin-bottom: 7vh;
 }
 .nav{
     position: fixed;
     top: 0;
     width: 90%;
     backdrop-filter: blur(10px);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     padding: 1vh 5vw;
     justify-content: space-between;
@@ -32,6 +31,7 @@ header{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     z-index: 10;
 }
+
 .nav #app a{
     text-decoration: none;
     color: white;
@@ -54,15 +54,17 @@ header{
     border-radius: 20px;
 }
 
-.nav-bar button:hover{
-    background-color: white;
+.nav-bar button:hover,
+.nav-bar button:active{
+    background-color: rgba(255, 255, 255, 0.603);
     color: black;
     text-shadow: none;
     cursor: pointer;
     box-shadow: 1px 2px 3px black;
+    transition: .5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.nav-bar button.navButtonIsAcive{
+.nav-bar button.navButtonIsActive{
     background-color: white;
     color: black;
     text-shadow: none;
@@ -122,9 +124,13 @@ header{
 }
 .sec-1{
     display: flex;
+    background-color: whitesmoke;
+    padding: 7vh 0 7vh 0;
+    width: 100vw;
+    height: fit-content;
     justify-content: center;
-    margin-bottom: 13vh;
 }
+
 .box{
     position: relative;
     width: 265px;
@@ -133,39 +139,31 @@ header{
     border-radius: 15px;
     box-shadow: 0px 1px 2px grey;
     background-color: rgb(243,240,240);
+    height: fit-content;
 }
+
 .box img{
     width: 100%;
+    height: 100%;
+    aspect-ratio: 1;
     border-radius: 15px;
     border: 1px solid rgb(233, 221, 221);
-    z-index: -1;
 }
-.white{
-    position: absolute;
-    bottom: 1px;
-    align-items: center;
-    border-radius: 0px 0px 10px 10px;
-    background-color: whitesmoke;
-    width: 100%;
-    height: 25%;
-    z-index: 1;
-}
-.white p{
+
+.box p{
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
     color: rgb(56,56,56);
 }
 .middle{
-    margin: 60px 150px;
-
+    padding: 60px 150px;
 }
 .sec-2 h2{
     font-size: 2.7em;
     font-weight: lighter;
+    margin-top: 7vh;
     margin-bottom: 10px;
-
-
 }
 .sec-2 div{
     display: flex;
@@ -383,7 +381,7 @@ header{
     left: 0;
     top: 0;
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    height: 110%; /* Full height */
     backdrop-filter: blur(3.5px);
     background-color: rgba(0, 0, 0, 0.4);
 }
@@ -481,8 +479,6 @@ header{
 
 .notification {
     background-color: rgba(0, 0, 0, 0.61);
-    /* background-color:; */
-    /* background-color: ; */
     backdrop-filter: blur(100px);
     color: white;
     padding: 16px;
@@ -518,6 +514,16 @@ header{
     border: 1px solid transparent;
 }
 
+.menu{
+    font-size: 2.8rem;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+
+input#menuShowMore{
+    display: none;
+}
 
 @keyframes slide-in {
     from {
